--- a/app/src/main/res/layout/layout_specie_details.xml
+++ b/app/src/main/res/layout/layout_specie_details.xml
@@ -18,6 +18,19 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
+            android:id="@+id/details_species_empty"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:gravity="center"
+            android:text="@string/species_empty"
+            android:textAllCaps="true"
+            android:textSize="16sp"
+            android:visibility="gone"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/details_species_title" />
+
+        <TextView
             android:id="@+id/details_species_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
