--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -23,5 +23,11 @@
 
         <include layout="@layout/layout_specie_details" />
 
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="48dp" />
+
+        <include layout="@layout/layout_films_list" />
+
     </LinearLayout>
 </ScrollView>
